# SearchKeywordOccurrences

./: .gitignore  .replit  README.md  lyrics.txt  main.py  pyproject.toml
app/: __init__.py  config.py  extractor.py  fetcher.py  results.py  routes.py  searcher.py  security.py
templates/: index.html
