[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "lxml>=6.1.0",
    "markupsafe>=3.0.3",
    "requests>=2.34.2",
]
